package org.example.vladtech.estimates.data.kitchen;

public enum CabinetQuality {
    STOCK,
    SEMI_CUSTOM,
    CUSTOM
}
