package org.example.vladtech.estimates.data.kitchen;

public enum CountertopMaterial {
    LAMINATE,
    BUTCHERBLOCK,
    GRANITE,
    QUARTZ,
    MARBLE,
    CONCRETE,
    STAINLESS_STEEL,
    SOLID_SURFACE,
    TILE
}
