package org.example.vladtech.estimates.data.patio;

public enum DeckMaterial {
    WOOD,
    COMPOSITE,
    PVC,
    ALUMINUM
}
