package org.example.vladtech.estimates.data.roof;

public enum RoofMaterial {
    ASPHALT,
    METAL,
    CLAY,
    SLATE,
    SYNTHETIC
}
