package org.example.vladtech.estimates.data.shared;

public enum FlooringMaterial {
    HARDWOOD,
    ENGINEERED_HARDWOOD,
    LAMINATE,
    VINYL,
    TILE,
    CARPET,
    POLISHED_CONCRETE
}
