package org.example.vladtech.estimates.data.siding;

public enum SidingMaterial {
    VINYL,
    WOOD,
    FIBER_CEMENT,
    BRICK,
    STONE_VENEER
}
