package org.example.vladtech.estimates.data.windowanddoor;

public enum DoorType {
    WOOD,
    FIBERGLASS,
    STEEL,
    GLASS_PANEL
}
