package org.example.vladtech.estimates.data.windowanddoor;

public enum WindowType {
    CASEMENT,
    SLIDER,
    DOUBLE_HUNG,
    AWNING,
    FIXED
}
