package org.example.vladtech.projectsubdomain.dataaccesslayer;

public enum ProjectPriority {
    LOW,
    MEDIUM,
    HIGH,
    URGENT
}
