package org.example.vladtech.projectsubdomain.dataaccesslayer;

public enum ProjectStatus {
    PENDING,
    IN_PROGRESS,
    COMPLETED
}
