@startuml
skinparam style strictuml
skinparam packageStyle rectangle

' =====================================================================
'                           AUTH BOUNDED CONTEXT
' =====================================================================
package "AUTH" as AUTH #FFF2B2 {

  class User {
    - auth0Id : String
    - password : String
    - email : String
    - role : Role
  }

  enum Role {
    ADMIN
    EMPLOYEE
    CLIENT
  }
  
  class UserProfile {
   - auth0sub : String
   - name: String
   - email: String
  }
  
  UserProfile --> User : has 1
  Role --> User : has 1
}

' =====================================================================
'                           EMAILING BOUNDED CONTEXT
' =====================================================================

package "Emailing" as EMAIL #FFF1CC {
    class Email{
    destinary : String
    title : String
    templateName : String
    header : String
    body : String
    footer : String
    senderName : String
    body : String
    }
    
    class RawEmail {
    destinary : String
    title : String
    body : String
    }
}
User "1" -- "0..*" Email : receives > 
User "0..1" -- "0..*" Email : notified >



' =====================================================================
'                           PROJECT BOUNDED CONTEXT
' =====================================================================
package "PROJECT" as PROJ #C7F3CE {
  class Project {
    - id : String
    - projectIdentifier : String
    - name : String
    - clientId : String
    - clientName : String
    - clientEmail : String
    - address : Address
    - description : String
    - startDate : LocalDate
    - dueDate : LocalDate
    - projectType : ProjectType
    - assignedEmployeeIds : List<String>
    - assignedEmployeeEmails : List<String>
    - photos : List<ProjectPhoto>
    - status : ProjectStatus
    - state : ProjectState
    - archivedAt : LocalDateTime
    - estimatedCost : BigDecimal
    - estimatedCostCurrency : String
    - priority : ProjectPriority
    - sentToPortfolio : Boolean
  }
  class ProjectPhoto {
    - photoId : String
    - photoUrl : String
    - description : String
  }
  class Address {
    - streetAddress : String
    - city : String
    - province : String
    - country : String
    - postalCode : String
  }
  
  class ProjectType {
    - type : ProjectTypeEnum
  }

  enum ProjectTypeEnum {
    APPOINTMENT
    SCHEDULED
  }
  
  enum ProjectStatus {
    PENDING
    IN_PROGRESS
    COMPLETED
  }
  
  enum ProjectState {
    ACTIVE
    COMPLETE
  }
  
  enum ProjectPriority {
    LOW
    MEDIUM
    HIGH
    URGENT
  }
  Project --> Address : has 1
  Project --> ProjectPhoto : contains *
  Project --> ProjectType : has
  ProjectType --> ProjectTypeEnum : has
  Project --> ProjectStatus : has
  Project --> ProjectState : has
  Project --> ProjectPriority : has
}


' =====================================================================
'                           REVIEWS BOUNDED CONTEXT
' =====================================================================
package "REVIEWS" as REV #FBE7C6 {

  class Review {
    - reviewId : String
    - clientId : String
    - appointmentId : String
    - comment : String
    - visible : Boolean
    - rating : Rating
    - isSentToPortfolio: Boolean
    - type: String
  }

  class Photo {
    - clientId : String
    - filename : String
    - imageType : String
    - data : byte[]
  }

  enum Rating {
    ONE
    TWO
    THREE
    FOUR
    FIVE
  }

  Review --> Rating : uses
  Review --> Photo : has one or many
}

' =====================================================================
'                           PORTFOLIO BOUNDED CONTEXT
' =====================================================================
package "PORTFOLIO" as PORT #C5D9FF {

  class PortfolioItem {
    - portfolioId : String
    - projectIdentifier : String (optional)
    - reviewId : String (optional)
    - title : String
    - imageUrl : String
    - type : String
    - reviewerName : String (optional)
    - comments : List<PortfolioComment>
    - archived : Boolean
  }

  class PortfolioComment {
    - authorName : String
    - authorUserId : String
    - timestamp : String
    - text : String
  }

  enum PortfolioType {
    INTERIOR
    KITCHEN
    BATHROOM
    EXTERIOR_YARD
  }

  PortfolioItem --> PortfolioComment : contains *
  PortfolioItem --> PortfolioType : has
}
User --> PortfolioComment : writes comment *

' =====================================================================
'                           ESTIMATION BOUNDED CONTEXT
' =====================================================================
package "ESTIMATION" as EST #F8C1D9 {

  ' ---------------- Shared cost model ----------------
  interface RenovationProject {
    + squareFeet : Double
    + laborRate : Double
    + materialCostPerSqFt : Double
    + overheadRate : Double
    + contingencyRate : Double
    + locationFactor : Double
    + estimatePrice : Double
    + taxAmount : Double
    + totalPrice : Double
  }

  ' ---------------- Project type details ----------------
  class KitchenRemodel {
    applianceAllowance : Double
    plumbingChanges : Boolean
    electricalChanges : Boolean
    layoutChangeComplexity : Int
    flooringMaterial : FlooringMaterial
    cabinetQuality : CabinetQuality
    countertopMaterial : CountertopMaterial
  }

  class FloorReplace {
    existingFloorMaterial : FlooringMaterial
    newFloorMaterial : FlooringMaterial
    subfloorRepairNeeded : Boolean
  }

  class RoofReplace {
    roofMaterial : RoofMaterial
    stories : Int
    roofPitch : String
    hasSkylights : Boolean
    tearOffRequired : Boolean
  }

  class WindowDoorReplace {
    windowType : WindowType
    doorType : DoorType
    windowCount : Int
    doorCount : Int
    energyEfficiencyLevel : String
  }

  class SidingReplace {
    sidingMaterial : SidingMaterial
    stories : Int
    includeInsulation : Boolean
    areaSqFt : Double
  }

  class DeckPatioAddition {
    deckMaterial : DeckMaterial
    hasRailing : Boolean
    stairsCount : Int
    isCovered : Boolean
    areaSqFt : Double
  }

  class GarageConvert {
    existingGarageFloorType : GarageFloorType
    newFloorMaterial : FlooringMaterial
    hasPlumbing : Boolean
    hasInsulation : Boolean
    newUseType : String
  }

  ' ---------------- Enums ----------------
  enum CabinetQuality {
    STOCK
    SEMI_CUSTOM
    CUSTOM
  }

  enum CountertopMaterial {
    LAMINATE
    BUTCHERBLOCK
    GRANITE
    QUARTZ
    MARBLE
    CONCRETE
    STAINLESS_STEEL
    SOLID_SURFACE
    TILE
  }

  enum FlooringMaterial {
    HARDWOOD
    ENGINEERED_HARDWOOD
    LAMINATE
    VINYL
    TILE
    CARPET
    POLISHED_CONCRETE
  }

  enum RoofMaterial {
    ASPHALT
    METAL
    CLAY
    SLATE
    SYNTHETIC
  }

  enum WindowType {
    CASEMENT
    SLIDER
    DOUBLE_HUNG
    AWNING
    FIXED
  }

  enum DoorType {
    WOOD
    FIBERGLASS
    STEEL
    GLASS_PANEL
  }

  enum SidingMaterial {
    VINYL
    WOOD
    FIBER_CEMENT
    BRICK
    STONE_VENEER
  }

  enum DeckMaterial {
    WOOD
    COMPOSITE
    PVC
    ALUMINUM
  }

  enum GarageFloorType {
    EPOXY
    TILE
    SEALED_CONCRETE
    POLISHED_CONCRETE
  }

  ' ---------------- Inheritance + enum links ----------------
  RenovationProject <|.. KitchenRemodel
  RenovationProject <|.. FloorReplace
  RenovationProject <|.. RoofReplace
  RenovationProject <|.. WindowDoorReplace
  RenovationProject <|.. SidingReplace
  RenovationProject <|.. DeckPatioAddition
  RenovationProject <|.. GarageConvert

  KitchenRemodel --> CabinetQuality
  KitchenRemodel --> CountertopMaterial
  KitchenRemodel --> FlooringMaterial

  FloorReplace --> FlooringMaterial
  RoofReplace --> RoofMaterial
  WindowDoorReplace --> WindowType
  WindowDoorReplace --> DoorType
  SidingReplace --> SidingMaterial
  DeckPatioAddition --> DeckMaterial
  GarageConvert --> GarageFloorType
  GarageConvert --> FlooringMaterial
}

' =====================================================================
'                           CROSS-CONTEXT RELATIONSHIPS
' =====================================================================

' ---- AUTH -> PROJECT ----
User --> Project : creates / manages
User --> ProjectPhoto : adds_photos

' ---- AUTH -> REVIEWS ----
User --> Review : writes
User --> Photo : uploads_photo

' ---- AUTH -> PORTFOLIO ----
User --> PortfolioItem : creates / updates

' ---- AUTH -> ESTIMATION ----
User --> RenovationProject : gets estimate

' ---- PROJECT -> PORTFOLIO ----
PROJ --> PORT : sends to portfolio

' ---- REVIEW -> PORTFOLIO ----
REV --> PORT : sends to portfolio

@enduml
